<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListOperations">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Operations List"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TableLayout
        android:id="@+id/tblOperations"
        android:layout_width="359dp"
        android:layout_height="586dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/tblrStatements"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblId"
                android:layout_width="31dp"
                android:layout_height="wrap_content"
                android:text="@string/field_id"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblOperation"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:text="@string/field_operation"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblData"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:text="@string/field_data"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblResult"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:text="@string/field_result"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>